@@ -241,6 +241,12 @@ set(VISP_HAVE_CPP11_COMPATIBILITY "@VISP_HAVE_CPP11_COMPATIBILITY@")
 if(VISP_HAVE_CPP11_COMPATIBILITY)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} @CPP11_CXX_FLAGS@")
 endif()
+#----------------------------------------------------------------------
+# Propagate openmp compiler option if enabled during ViSP build
+#----------------------------------------------------------------------
+if(VISP_HAVE_OPENMP)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} @OpenMP_CXX_FLAGS@")
+endif()
 
 #----------------------------------------------------------------------
 # Some useful macro to be able to build the tutorials along side ViSP
